--- a/auto-category-tagger.ipynb
+++ b/auto-category-tagger.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyORxWzOC4h6mBxc8EAsRnBC",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Ivan-KKH/APAI4011_GP/blob/master/predicting_category.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -51,9 +35,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "uploaded = files.upload()"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -62,14 +44,9 @@
         "id": "osq4rvsIFzCH",
         "outputId": "48704b7b-c0d4-4785-bc57-2852703ee074"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
               "     <input type=\"file\" id=\"files-5277d5ee-1413-4191-ae7b-39b05fd3ba21\" name=\"files[]\" multiple disabled\n",
@@ -254,35 +231,47 @@
               "};\n",
               "})(self);\n",
               "</script> "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Saving amazon.csv to amazon.csv\n"
           ]
         }
+      ],
+      "source": [
+        "uploaded = files.upload()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "L9uv8KXfGLx7"
+      },
+      "outputs": [],
       "source": [
         "#read csv file\n",
         "df = pd.read_csv(io.BytesIO(uploaded['amazon.csv']))\n",
         "#dfReview for review title and review content\n",
         "dfText = df[['product_name','about_product','category']]"
-      ],
-      "metadata": {
-        "id": "L9uv8KXfGLx7"
-      },
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "hP6eO3KgHK77"
+      },
+      "outputs": [],
       "source": [
         "for column in range(2):\n",
         "  dfText.iloc[:,column] = dfText.iloc[:,column].apply(lambda x: x.lower())\n",
@@ -292,15 +281,29 @@
         "\n",
         "#combine product_name and about_product\n",
         "dfText['combined'] = dfText['product_name'] + ' ' + dfText['about_product']"
-      ],
-      "metadata": {
-        "id": "hP6eO3KgHK77"
-      },
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pmmCvkPVJ53x",
+        "outputId": "d6b3fc24-3d93-468f-f229-47413ac81db3"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "category list: ['Computers&Accessories', 'Electronics', 'MusicalInstruments', 'OfficeProducts', 'Home&Kitchen', 'HomeImprovement', 'Toys&Games', 'Car&Motorbike', 'Health&PersonalCare']\n",
+            "shape of text: (1465, 424)\n",
+            "shape of category: (1465, 9)\n"
+          ]
+        }
+      ],
       "source": [
         "#tokenize, build vocab, and add paddings on product_name\n",
         "tokenizer = Tokenizer(num_words=2000,split=' ')\n",
@@ -319,60 +322,24 @@
         "\n",
         "print(f'shape of text: {text.shape}')\n",
         "print(f'shape of category: {category.shape}')\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "pmmCvkPVJ53x",
-        "outputId": "d6b3fc24-3d93-468f-f229-47413ac81db3"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "category list: ['Computers&Accessories', 'Electronics', 'MusicalInstruments', 'OfficeProducts', 'Home&Kitchen', 'HomeImprovement', 'Toys&Games', 'Car&Motorbike', 'Health&PersonalCare']\n",
-            "shape of text: (1465, 424)\n",
-            "shape of category: (1465, 9)\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Fn8_2SbpKZV3"
+      },
+      "outputs": [],
       "source": [
         "from keras.layers import Input, Embedding, LSTM, Dense, concatenate, Flatten, Reshape, SpatialDropout1D\n",
         "from keras.models import Sequential\n",
         "from sklearn.model_selection import train_test_split"
-      ],
-      "metadata": {
-        "id": "Fn8_2SbpKZV3"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#split data\n",
-        "X_train, X_test, Y_train, Y_test = train_test_split(text, category, test_size=0.2, random_state=42)\n",
-        "print(X_train.shape,Y_train.shape)\n",
-        "print(X_test.shape,Y_test.shape)\n",
-        "\n",
-        "#apply Bidirectional LSTM\n",
-        "model = Sequential()\n",
-        "model.add(Embedding(2000, 128, input_length = 424))\n",
-        "model.add(SpatialDropout1D(0.4))\n",
-        "model.add(Bidirectional(LSTM(196, dropout=0.2, recurrent_dropout=0.2)))\n",
-        "model.add(Dense(9,activation='softmax'))\n",
-        "model.compile(loss = 'categorical_crossentropy', optimizer='adam',metrics = ['accuracy'])\n",
-        "\n",
-        "#Train the model for 5 epoches with embedding matrix you obtained earlier.\n",
-        "#print training loss and training accuracy for each epoch\n",
-        "model.fit(X_train, Y_train, epochs=10, batch_size=32, validation_data=(X_test,Y_test))  \n"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -380,11 +347,10 @@
         "id": "t3SZLplpLmvS",
         "outputId": "cc04e1fc-2988-4f6c-d067-8fd0bb0942dc"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "(1172, 424) (1172, 9)\n",
             "(293, 424) (293, 9)\n",
@@ -411,19 +377,59 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<keras.callbacks.History at 0x7f79841f91f0>"
             ]
           },
+          "execution_count": 162,
           "metadata": {},
-          "execution_count": 162
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "#split data\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(text, category, test_size=0.2, random_state=42)\n",
+        "print(X_train.shape,Y_train.shape)\n",
+        "print(X_test.shape,Y_test.shape)\n",
+        "\n",
+        "#apply Bidirectional LSTM\n",
+        "model = Sequential()\n",
+        "model.add(Embedding(2000, 128, input_length = 424))\n",
+        "model.add(SpatialDropout1D(0.4))\n",
+        "model.add(Bidirectional(LSTM(196, dropout=0.2, recurrent_dropout=0.2)))\n",
+        "model.add(Dense(9,activation='softmax'))\n",
+        "model.compile(loss = 'categorical_crossentropy', optimizer='adam',metrics = ['accuracy'])\n",
+        "\n",
+        "#Train the model for 5 epoches with embedding matrix you obtained earlier.\n",
+        "#print training loss and training accuracy for each epoch\n",
+        "model.fit(X_train, Y_train, epochs=10, batch_size=32, validation_data=(X_test,Y_test))  \n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ugrV04vuY4DJ",
+        "outputId": "fbf09e2f-648c-42b3-aad2-06688193702a"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "424\n",
+            "1/1 [==============================] - 0s 176ms/step\n",
+            "Product name: Fire-Boltt Ninja Call Pro Plus 1.83\" Smart Watch with Bluetooth Calling, AI Voice Assistance, 100 Sports Modes IP67 Rating, 240*280 Pixel High Resolution\n",
+            "Product description: Fire-Boltt is India' No 1 Wearable Watch Brand Q122 by IDC Worldwide quarterly wearable device tracker Q122.【Bluetooth Calling Watch】- Fire-Boltt Ninja Call Pro Plus Smart Watch enables you to make and receive calls directly from your watch via the built-in speaker and microphone. This smartwatch features a dial pad, option to access recent calls & sync your phone’s contacts.|【1.83\" HD Display Smartwatch】- The 46.48mm (1.83-inch) HD display makes the display clear and true-to-life, with vivid colours ensuring smooth readability and keeping the watch as exquisite to look at as when you first lay your eyes on it.|【AI Voice Assistant】- With built-in Voice assistant, you can simply speak to the smartwatch & get things done on your command|【100 Sport Modes】- Track every trek you take or every football, cricket kabaddi match you play. With over 100 sports modes Fire-Boltt Ninja Call Pro Plus has you covered.|【Fire-Boltt Health Suite】- With advanced technology and HRS chipset the smartwatch can give out near to accurate SpO2, Heart Rate readings. This mini health device tracks your sleep to ensure glowing and fresh look each day\n",
+            "Predicted Category: Electronics\n",
+            "Actual Category: Electronics\n"
+          ]
+        }
+      ],
       "source": [
         "#a simple predictor function\n",
         "def predict(product_name, about_product):\n",
@@ -472,29 +478,24 @@
         "print(f'Predicted Category: {pred_categ}')\n",
         "print(f'Actual Category: {category_list[actual_category]}')\n",
         "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ugrV04vuY4DJ",
-        "outputId": "fbf09e2f-648c-42b3-aad2-06688193702a"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "424\n",
-            "1/1 [==============================] - 0s 176ms/step\n",
-            "Product name: Fire-Boltt Ninja Call Pro Plus 1.83\" Smart Watch with Bluetooth Calling, AI Voice Assistance, 100 Sports Modes IP67 Rating, 240*280 Pixel High Resolution\n",
-            "Product description: Fire-Boltt is India' No 1 Wearable Watch Brand Q122 by IDC Worldwide quarterly wearable device tracker Q122.【Bluetooth Calling Watch】- Fire-Boltt Ninja Call Pro Plus Smart Watch enables you to make and receive calls directly from your watch via the built-in speaker and microphone. This smartwatch features a dial pad, option to access recent calls & sync your phone’s contacts.|【1.83\" HD Display Smartwatch】- The 46.48mm (1.83-inch) HD display makes the display clear and true-to-life, with vivid colours ensuring smooth readability and keeping the watch as exquisite to look at as when you first lay your eyes on it.|【AI Voice Assistant】- With built-in Voice assistant, you can simply speak to the smartwatch & get things done on your command|【100 Sport Modes】- Track every trek you take or every football, cricket kabaddi match you play. With over 100 sports modes Fire-Boltt Ninja Call Pro Plus has you covered.|【Fire-Boltt Health Suite】- With advanced technology and HRS chipset the smartwatch can give out near to accurate SpO2, Heart Rate readings. This mini health device tracks your sleep to ensure glowing and fresh look each day\n",
-            "Predicted Category: Electronics\n",
-            "Actual Category: Electronics\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyORxWzOC4h6mBxc8EAsRnBC",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.8.16"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
