--- a/auto-category-tagger.ipynb
+++ b/auto-category-tagger.ipynb
@@ -1,10 +1,29 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyPM5nM67PckZIyVwcB0fktt",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
+  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Ivan-KKH/APAI4011_GP/blob/master/predicting_category.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "ObWn2EbyFv_a"
       },
@@ -35,23 +54,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "source": [
+        "uploaded = files.upload()"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 76
         },
         "id": "osq4rvsIFzCH",
-        "outputId": "48704b7b-c0d4-4785-bc57-2852703ee074"
+        "outputId": "2115e664-b341-4183-ab7f-d2ad8899482c"
       },
+      "execution_count": null,
       "outputs": [
         {
+          "output_type": "display_data",
           "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-5277d5ee-1413-4191-ae7b-39b05fd3ba21\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-53fee58c-4e0e-4f83-b333-bf647ed7b52e\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-5277d5ee-1413-4191-ae7b-39b05fd3ba21\">\n",
+              "     <output id=\"result-53fee58c-4e0e-4f83-b333-bf647ed7b52e\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -231,47 +257,35 @@
               "};\n",
               "})(self);\n",
               "</script> "
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         },
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Saving amazon.csv to amazon.csv\n"
           ]
         }
-      ],
-      "source": [
-        "uploaded = files.upload()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
-        "id": "L9uv8KXfGLx7"
-      },
-      "outputs": [],
       "source": [
         "#read csv file\n",
         "df = pd.read_csv(io.BytesIO(uploaded['amazon.csv']))\n",
         "#dfReview for review title and review content\n",
         "dfText = df[['product_name','about_product','category']]"
-      ]
+      ],
+      "metadata": {
+        "id": "L9uv8KXfGLx7"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {
-        "id": "hP6eO3KgHK77"
-      },
-      "outputs": [],
       "source": [
         "for column in range(2):\n",
         "  dfText.iloc[:,column] = dfText.iloc[:,column].apply(lambda x: x.lower())\n",
@@ -281,29 +295,15 @@
         "\n",
         "#combine product_name and about_product\n",
         "dfText['combined'] = dfText['product_name'] + ' ' + dfText['about_product']"
-      ]
+      ],
+      "metadata": {
+        "id": "hP6eO3KgHK77"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "pmmCvkPVJ53x",
-        "outputId": "d6b3fc24-3d93-468f-f229-47413ac81db3"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "category list: ['Computers&Accessories', 'Electronics', 'MusicalInstruments', 'OfficeProducts', 'Home&Kitchen', 'HomeImprovement', 'Toys&Games', 'Car&Motorbike', 'Health&PersonalCare']\n",
-            "shape of text: (1465, 424)\n",
-            "shape of category: (1465, 9)\n"
-          ]
-        }
-      ],
       "source": [
         "#tokenize, build vocab, and add paddings on product_name\n",
         "tokenizer = Tokenizer(num_words=2000,split=' ')\n",
@@ -322,71 +322,42 @@
         "\n",
         "print(f'shape of text: {text.shape}')\n",
         "print(f'shape of category: {category.shape}')\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Fn8_2SbpKZV3"
-      },
-      "outputs": [],
-      "source": [
-        "from keras.layers import Input, Embedding, LSTM, Dense, concatenate, Flatten, Reshape, SpatialDropout1D\n",
-        "from keras.models import Sequential\n",
-        "from sklearn.model_selection import train_test_split"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "t3SZLplpLmvS",
-        "outputId": "cc04e1fc-2988-4f6c-d067-8fd0bb0942dc"
+        "id": "pmmCvkPVJ53x",
+        "outputId": "85f88555-d558-4a5e-86ec-6af00c09c8ac"
       },
+      "execution_count": null,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "(1172, 424) (1172, 9)\n",
-            "(293, 424) (293, 9)\n",
-            "Epoch 1/10\n",
-            "37/37 [==============================] - 104s 3s/step - loss: 1.4114 - accuracy: 0.3481 - val_loss: 1.2616 - val_accuracy: 0.3447\n",
-            "Epoch 2/10\n",
-            "37/37 [==============================] - 100s 3s/step - loss: 1.2012 - accuracy: 0.3848 - val_loss: 1.1864 - val_accuracy: 0.3618\n",
-            "Epoch 3/10\n",
-            "37/37 [==============================] - 98s 3s/step - loss: 1.0368 - accuracy: 0.6015 - val_loss: 1.2471 - val_accuracy: 0.3754\n",
-            "Epoch 4/10\n",
-            "37/37 [==============================] - 101s 3s/step - loss: 0.6356 - accuracy: 0.7824 - val_loss: 0.6314 - val_accuracy: 0.8123\n",
-            "Epoch 5/10\n",
-            "37/37 [==============================] - 102s 3s/step - loss: 0.3472 - accuracy: 0.8771 - val_loss: 0.3675 - val_accuracy: 0.8840\n",
-            "Epoch 6/10\n",
-            "37/37 [==============================] - 102s 3s/step - loss: 0.2109 - accuracy: 0.9317 - val_loss: 0.4201 - val_accuracy: 0.8840\n",
-            "Epoch 7/10\n",
-            "37/37 [==============================] - 102s 3s/step - loss: 0.1400 - accuracy: 0.9582 - val_loss: 0.3366 - val_accuracy: 0.8976\n",
-            "Epoch 8/10\n",
-            "37/37 [==============================] - 102s 3s/step - loss: 0.1052 - accuracy: 0.9684 - val_loss: 0.3311 - val_accuracy: 0.9181\n",
-            "Epoch 9/10\n",
-            "37/37 [==============================] - 98s 3s/step - loss: 0.0803 - accuracy: 0.9778 - val_loss: 0.3609 - val_accuracy: 0.9010\n",
-            "Epoch 10/10\n",
-            "37/37 [==============================] - 97s 3s/step - loss: 0.0545 - accuracy: 0.9872 - val_loss: 0.3751 - val_accuracy: 0.8874\n"
+            "category list: ['Computers&Accessories', 'Electronics', 'MusicalInstruments', 'OfficeProducts', 'Home&Kitchen', 'HomeImprovement', 'Toys&Games', 'Car&Motorbike', 'Health&PersonalCare']\n",
+            "shape of text: (1465, 424)\n",
+            "shape of category: (1465, 9)\n"
           ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "<keras.callbacks.History at 0x7f79841f91f0>"
-            ]
-          },
-          "execution_count": 162,
-          "metadata": {},
-          "output_type": "execute_result"
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from keras.layers import Input, Embedding, LSTM, Dense, concatenate, Flatten, Reshape, SpatialDropout1D\n",
+        "from keras.models import Sequential\n",
+        "from sklearn.model_selection import train_test_split"
       ],
+      "metadata": {
+        "id": "Fn8_2SbpKZV3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#split data\n",
         "X_train, X_test, Y_train, Y_test = train_test_split(text, category, test_size=0.2, random_state=42)\n",
@@ -404,98 +375,116 @@
         "#Train the model for 5 epoches with embedding matrix you obtained earlier.\n",
         "#print training loss and training accuracy for each epoch\n",
         "model.fit(X_train, Y_train, epochs=10, batch_size=32, validation_data=(X_test,Y_test))  \n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ugrV04vuY4DJ",
-        "outputId": "fbf09e2f-648c-42b3-aad2-06688193702a"
+        "id": "t3SZLplpLmvS",
+        "outputId": "b6d1bed9-d561-4eb4-a874-28d2f6527ffb"
       },
+      "execution_count": null,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "424\n",
-            "1/1 [==============================] - 0s 176ms/step\n",
-            "Product name: Fire-Boltt Ninja Call Pro Plus 1.83\" Smart Watch with Bluetooth Calling, AI Voice Assistance, 100 Sports Modes IP67 Rating, 240*280 Pixel High Resolution\n",
-            "Product description: Fire-Boltt is India' No 1 Wearable Watch Brand Q122 by IDC Worldwide quarterly wearable device tracker Q122.【Bluetooth Calling Watch】- Fire-Boltt Ninja Call Pro Plus Smart Watch enables you to make and receive calls directly from your watch via the built-in speaker and microphone. This smartwatch features a dial pad, option to access recent calls & sync your phone’s contacts.|【1.83\" HD Display Smartwatch】- The 46.48mm (1.83-inch) HD display makes the display clear and true-to-life, with vivid colours ensuring smooth readability and keeping the watch as exquisite to look at as when you first lay your eyes on it.|【AI Voice Assistant】- With built-in Voice assistant, you can simply speak to the smartwatch & get things done on your command|【100 Sport Modes】- Track every trek you take or every football, cricket kabaddi match you play. With over 100 sports modes Fire-Boltt Ninja Call Pro Plus has you covered.|【Fire-Boltt Health Suite】- With advanced technology and HRS chipset the smartwatch can give out near to accurate SpO2, Heart Rate readings. This mini health device tracks your sleep to ensure glowing and fresh look each day\n",
-            "Predicted Category: Electronics\n",
-            "Actual Category: Electronics\n"
+            "(1172, 424) (1172, 9)\n",
+            "(293, 424) (293, 9)\n"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:tensorflow:Layer lstm will not use cuDNN kernels since it doesn't meet the criteria. It will use a generic GPU kernel as fallback when running on GPU.\n",
+            "WARNING:tensorflow:Layer lstm will not use cuDNN kernels since it doesn't meet the criteria. It will use a generic GPU kernel as fallback when running on GPU.\n",
+            "WARNING:tensorflow:Layer lstm will not use cuDNN kernels since it doesn't meet the criteria. It will use a generic GPU kernel as fallback when running on GPU.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "37/37 [==============================] - 158s 4s/step - loss: 1.3598 - accuracy: 0.3507 - val_loss: 1.0952 - val_accuracy: 0.4949\n",
+            "Epoch 2/10\n",
+            "37/37 [==============================] - 146s 4s/step - loss: 0.8389 - accuracy: 0.7304 - val_loss: 0.9052 - val_accuracy: 0.6553\n",
+            "Epoch 3/10\n",
+            "37/37 [==============================] - 147s 4s/step - loss: 0.5892 - accuracy: 0.8302 - val_loss: 0.5167 - val_accuracy: 0.8771\n",
+            "Epoch 4/10\n",
+            "37/37 [==============================] - 156s 4s/step - loss: 0.3154 - accuracy: 0.9104 - val_loss: 0.4675 - val_accuracy: 0.8703\n",
+            "Epoch 5/10\n",
+            "37/37 [==============================] - 146s 4s/step - loss: 0.3814 - accuracy: 0.9138 - val_loss: 0.8461 - val_accuracy: 0.7167\n",
+            "Epoch 6/10\n",
+            "37/37 [==============================] - 163s 4s/step - loss: 0.3567 - accuracy: 0.8942 - val_loss: 0.3941 - val_accuracy: 0.9078\n",
+            "Epoch 7/10\n",
+            "37/37 [==============================] - 147s 4s/step - loss: 0.1417 - accuracy: 0.9590 - val_loss: 0.2989 - val_accuracy: 0.9283\n",
+            "Epoch 8/10\n",
+            "37/37 [==============================] - 156s 4s/step - loss: 0.1237 - accuracy: 0.9710 - val_loss: 0.4068 - val_accuracy: 0.8908\n",
+            "Epoch 9/10\n",
+            "37/37 [==============================] - 144s 4s/step - loss: 0.1286 - accuracy: 0.9650 - val_loss: 0.2671 - val_accuracy: 0.9454\n",
+            "Epoch 10/10\n",
+            "37/37 [==============================] - 143s 4s/step - loss: 0.0806 - accuracy: 0.9821 - val_loss: 0.3091 - val_accuracy: 0.9420\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f48d00d1210>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
-        "#a simple predictor function\n",
-        "def predict(product_name, about_product):\n",
-        "    # Convert to lowercase\n",
-        "    name = product_name.lower()\n",
-        "    desc = about_product.lower()\n",
-        "\n",
-        "    #remove punctuation\n",
-        "    name = re.sub(r\"http\\S+\",\" \",name)\n",
-        "    desc = re.sub(r\"http\\S+\",\" \",desc)\n",
-        "\n",
-        "    #text\n",
-        "    text = name + ' ' + desc\n",
-        "\n",
-        "    #tokenize, build vocab, and add paddings on product_name\n",
-        "    text = tokenizer.texts_to_sequences(text)\n",
-        "    token_list = []\n",
-        "    for element in text:\n",
-        "        if element:\n",
-        "            token_list.append(element[0])\n",
-        "    token_list = token_list[:423]\n",
-        "    token_len = len(token_list)\n",
-        "\n",
-        "    #pad sequence\n",
-        "    zero_list = np.zeros(424 - token_len)\n",
-        "    padded_list = [*zero_list, *token_list]\n",
-        "    padded_list = [padded_list]\n",
-        "\n",
-        "    #predict category\n",
-        "    pred = model.predict(padded_list)\n",
-        "    max_idx = np.argmax(pred)\n",
-        "    predicted_category = category_list[max_idx]\n",
-        "\n",
-        "    return predicted_category\n",
-        "\n",
+        "#auto category tagger function\n",
         "#choose a random product\n",
-        "rand_idx = random.randint(0,1465)\n",
-        "product_name = df['product_name'][rand_idx]\n",
-        "about_product = df['about_product'][rand_idx]\n",
+        "rand_idx = random.randint(0,len(df))\n",
+        "product_name = dfText['product_name'][rand_idx]\n",
+        "about_product = dfText['about_product'][rand_idx]\n",
         "\n",
-        "#predict its category\n",
-        "pred_categ = predict(product_name, about_product)\n",
+        "#reshape the tokenised input\n",
+        "input= np.reshape(text[rand_idx],(1, text[rand_idx].shape[0]))\n",
+        "\n",
+        "#predict the category\n",
+        "pred = model.predict(input)\n",
+        "max_idx = np.argmax(pred)\n",
+        "predicted_category = category_list[max_idx]\n",
+        "\n",
+        "#print out the results\n",
         "actual_category = np.argmax(category[rand_idx])\n",
         "print(f\"Product name: {product_name}\")\n",
         "print(f\"Product description: {about_product}\")\n",
-        "print(f'Predicted Category: {pred_categ}')\n",
-        "print(f'Actual Category: {category_list[actual_category]}')\n",
-        "\n"
+        "print(f'Predicted Category: {predicted_category}')\n",
+        "print(f'Actual Category: {category_list[actual_category]}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z0POcrHSpOv0",
+        "outputId": "fcb33978-a4b7-4fbc-f9ba-e0f900cc6d05"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1/1 [==============================] - 0s 242ms/step\n",
+            "Product name: sandisk ultra dual drive go usb type c pendrive for mobile  black  128 gb  5y   sdddc3 128g i35 \n",
+            "Product description: the 2 in 1 flash drive with a reversible usb type c and a traditional type a connector  seamlessly move content between your usb type c smartphone  tablets and macs and usb type a computers  free up space on your usb type c smartphone so you can take more photos  automatically back up photos using the sandisk memory zone app high performance usb 3 1 gen 1 drive with 150mb s read speeds lets you quickly move your files to your computer 1 dual purpose swivel design protects connectors and features a keyring hole to take your drive on the go \n",
+            "Predicted Category: Computers & Accessories\n",
+            "Actual Category: Computers & Accessories\n"
+          ]
+        }
       ]
     }
-  ],
-  "metadata": {
-    "colab": {
-      "authorship_tag": "ABX9TyORxWzOC4h6mBxc8EAsRnBC",
-      "include_colab_link": true,
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python",
-      "version": "3.8.16"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
