--- a/Explorative-Data-Analysis.ipynb
+++ b/Explorative-Data-Analysis.ipynb
@@ -2807,24 +2807,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "a037cd3a",
-   "metadata": {
-    "papermill": {
-     "duration": 0.027679,
-     "end_time": "2023-04-07T14:02:47.042487",
-     "exception": false,
-     "start_time": "2023-04-07T14:02:47.014808",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "In this stage I will try to elaborate my insights through Visualizations, Pivot Tables, and short explanations."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 38,
    "id": "fcace060",
@@ -2868,7 +2850,7 @@
     "tags": []
    },
    "source": [
-    "## **Observation 1: Product Category**"
+    "## **Product Category**"
    ]
   },
   {
@@ -3349,7 +3331,7 @@
     "tags": []
    },
    "source": [
-    "## **Observation 2: Correlation between Features**"
+    "## **Correlation between Features**"
    ]
   },
   {
@@ -3571,7 +3553,7 @@
     "tags": []
    },
    "source": [
-    "## **Observation 3: Product Ratings**"
+    "## **Product Ratings**"
    ]
   },
   {
@@ -3631,26 +3613,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "80ec43f6",
-   "metadata": {
-    "papermill": {
-     "duration": 0.038185,
-     "end_time": "2023-04-07T14:02:51.407799",
-     "exception": false,
-     "start_time": "2023-04-07T14:02:51.369614",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "Most of the product rating range around **4.0 - 4.375** with **no products under the score of 2.0**. The rating distribution in **slightly left-skewed**. \n",
-    "\n",
-    "The amount of ratings given to a product is very widespread. Most of the products that have been rated, have around **0 - 5000 amount of rating** for each product. Interestingly there are products that have more than 40,000 ratings. The amount of **ratings distribution is highly right skewed**."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 48,
    "id": "aa96176c",
@@ -3694,28 +3656,6 @@
     "ax.set_title('Rating Distribution by Product Main Category', fontweight='heavy', size='x-large', y=1.03)\n",
     "\n",
     "plt.show()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "e709f4d2",
-   "metadata": {
-    "papermill": {
-     "duration": 0.040413,
-     "end_time": "2023-04-07T14:02:51.940909",
-     "exception": false,
-     "start_time": "2023-04-07T14:02:51.900496",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**Toys & Games, Car & Motorbike, and Health & Personal Care** product ratings's are around **3.75 - 4.375**. **All Home Improvement, and Office Products** have a **minimal rating of 4.0**.\n",
-    "\n",
-    "Many of the **Computer & Accessories, and Electronics** products have ratings in the range of  **3.6 - 4.6.** Though these categories do have products that have a high rating such as 5.0 and low rating, going down to 2.75.\n",
-    "\n",
-    "Noticeably, the **Home & Kitchen products** have a really widespread rating going to as **high as 4.75** and going as **low as 2.0** rating, which is the lowest rating out of all the products in this dataset. However, most of the products in this category fall in the range of around **3.8 - 4.6**."
    ]
   },
   {
@@ -4175,24 +4115,6 @@
     "rating_count_plot.bar_label(rating_count_plot.containers[0])\n",
     "\n",
     "plt.show()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "f5125038",
-   "metadata": {
-    "papermill": {
-     "duration": 0.041111,
-     "end_time": "2023-04-07T14:02:53.651458",
-     "exception": false,
-     "start_time": "2023-04-07T14:02:53.610347",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**Most of the products** in this dataset have been rated **Above Average**. There are **extremely few products** that are rated **Below Average and Excellent**. **No products are rated as Poor** in this dataset. "
    ]
   },
   {
@@ -4925,7 +4847,7 @@
     "tags": []
    },
    "source": [
-    "## **Observation 3: Reviewers**"
+    "## **Reviewers**"
    ]
   },
   {
@@ -4974,26 +4896,6 @@
     "top_review_plot.set_title('Top 10 Active Reviewers', fontweight='heavy', size='x-large', y=1.03)\n",
     "\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "34f16b4b",
-   "metadata": {
-    "papermill": {
-     "duration": 0.044445,
-     "end_time": "2023-04-07T14:02:54.531649",
-     "exception": false,
-     "start_time": "2023-04-07T14:02:54.487204",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "We can see that there are more than **500 people who reviewed a product and give rating anonymously** under the **alias of Amazon Customer, Place Holder, and Kindle Customer**.\n",
-    "\n",
-    "There are **more than 8 people** who have given ratings and reviews to **more than 10 products** on this dataset. "
    ]
   },
   {
