--- a/auto-sales-booster.ipynb
+++ b/auto-sales-booster.ipynb
@@ -38,11 +38,11 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "2023-05-06 21:56:18.784701: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-            "2023-05-06 21:56:18.827888: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-            "2023-05-06 21:56:18.828632: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "2023-05-07 08:07:43.496196: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+            "2023-05-07 08:07:43.539746: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+            "2023-05-07 08:07:43.540314: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
             "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-            "2023-05-06 21:56:19.370158: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+            "2023-05-07 08:07:44.088742: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
           ]
         }
       ],
@@ -179,7 +179,7 @@
           "text": [
             "No model was supplied, defaulted to distilbert-base-uncased-finetuned-sst-2-english and revision af0f99b (https://huggingface.co/distilbert-base-uncased-finetuned-sst-2-english).\n",
             "Using a pipeline without specifying a model name and revision in production is not recommended.\n",
-            "100%|██████████| 1465/1465 [00:19<00:00, 73.67it/s]\n"
+            "100%|██████████| 1465/1465 [00:20<00:00, 71.87it/s]\n"
           ]
         },
         {
@@ -498,20 +498,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "actual price:  1130.0\n",
-            "rating:  4.2\n",
-            "rating count:  13250.0\n",
-            "review:  Good product,Nice product up to the mark,Good one,Excellent,Water purifier,Good,Super,Good it helping us\n",
+            "actual price:  499.0\n",
+            "rating:  3.3\n",
+            "rating count:  2804.0\n",
+            "review:  No TRRS to TRS converter in the box,Not suitable for DSLR camera,Good for beginners,OK,Don't buy,For beginners it's good,Average product,It is a good and useful mic for YouTube content maker\n",
             "\n",
-            "suggested discounted price: 764.4000000000001\n",
-            "actual discounted price:  1130.0\n"
+            "suggested discounted price: 185.66000000000076\n",
+            "actual discounted price:  199.0\n"
           ]
         }
       ],
